@@ -51,9 +51,12 @@ public class Bag implements java.util.Collection, java.io.Serializable, Cloneabl
     public Bag(final Bag other)
         {
         if (other==null) { numObjs = 0; objs = new Object[1]; }
-        numObjs = other.numObjs;
-        objs = new Object[numObjs];
-        System.arraycopy(other.objs,0,objs,0,numObjs);
+        else
+			{
+			numObjs = other.numObjs;
+			objs = new Object[numObjs];
+			System.arraycopy(other.objs,0,objs,0,numObjs);
+			}
         }
     
     public int size()
