@@ -37,9 +37,12 @@ public class IntBag implements java.io.Serializable, Cloneable, Indexed
     public IntBag(final IntBag other)
         {
         if (other==null) { numObjs = 0; objs = new int[1]; }
-        numObjs = other.numObjs;
-        objs = new int[numObjs];
-        System.arraycopy(other.objs,0,objs,0,numObjs);
+        else
+			{
+			numObjs = other.numObjs;
+			objs = new int[numObjs];
+			System.arraycopy(other.objs,0,objs,0,numObjs);
+			}
         }
     
     public int size()
